@@ -1,3 +1,8 @@
+2008-08-02  Tor Lillqvist  <tml@novell.com>
+
+	* glibconfig.h.win32.in: Add gintptr and guintptr typedefs here,
+	too, appropriately ifdeffed for 32/64 bit, gcc/MSVC.
+
 2008-08-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* NEWS: Updates
